--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
-									<h1 class="major">Hello, my name<br />
-									is Ethereal</h1>
-									<p>This is <strong>Ethereal</strong>, a free site template by AJ for <a href="https://html5up.net">HTML5 UP</a>. It’s fully responsive, built on HTML5 and CSS3, and released entirely for free under the Creative Commons license. Hope you dig it :)</p>
+									<h1 class="major">Hello, I am<br />
+									Wind Pham</h1>
+									<p>I surrounded myself with positive, motivated, inspiring people, role models, and mentors. I observed and listened, attentive to their every action and adapted learnings to suit my personality, values and direction.It is essential to challenge yourself, make the change, reflect and grow. And it is crucial to keep driving towards your goal, it could be continuing the great work in your current position, or it could be that you are looking to progress to the next level. </p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
 								</div>
-								<div class="image filtered span-1-75" data-position="25% 25%">
+								<div class="image span-1-75" data-position="25% 25%">
 									<img src="images/pic01.jpg" alt="" />
 								</div>
 							</section>
@@ -46,7 +46,7 @@
 								</div>
 							</section>
 
-						<!-- Panel -->
+						<!-- Panel 
 							<section class="panel color1">
 								<div class="intro joined">
 									<h2 class="major">Amet lorem</h2>
@@ -62,7 +62,7 @@
 										<li><span class="icon solid fa-code"><span class="label">Nullam</span></span></li>
 									</ul>
 								</div>
-							</section>
+							</section>-->
 
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight large left">
@@ -75,10 +75,10 @@
 								</div>
 							</section>
 
-						<!-- Panel -->
-							<section class="panel">
-								<div class="intro color2">
-									<h2 class="major">Elit integer</h2>
+						<!-- Panel - WP16 -->
+							<section id="wp16" class="panel">
+								<div class="intro color1">
+									<h2 class="major">WP16</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
 								</div>
 								<div class="gallery">
@@ -87,7 +87,27 @@
 										<a href="images/gallery/fulls/02.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/03.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
 									</div>
+								</div>
+							</section>
+							
+							<!-- Panel - WP17 -->
+							<section id="wp17" class="panel">
+								<div class="intro color2">
+									<h2 class="major">WP17</h2>
+									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+								</div>
+								<div class="gallery">
 									<a href="images/gallery/fulls/04.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
+								</div>
+							</section>
+							
+							<!-- Panel - WP18 -->
+							<section id="wp18" class="panel">
+								<div class="intro color3">
+									<h2 class="major">WP18</h2>
+									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+								</div>
+								<div class="gallery">
 									<div class="group span-4-5">
 										<a href="images/gallery/fulls/05.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/06.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
@@ -138,7 +158,7 @@
 								</div>
 							</section>
 
-						<!-- Panel -->
+						<!-- Panel 
 							<section class="panel color2-alt">
 								<div class="intro color2">
 									<h2 class="major">Elements</h2>
@@ -405,10 +425,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										</form>
 									</div>
 								</div>
-							</section>
+							</section>-->
 
-						<!-- Copyright -->
-							<div class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+						<!-- Copyright 
+							<div class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>-->
 
 					</div>
 
