--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
 								</div>
 								<div class="gallery">
-								  <video src="https://media.githubusercontent.com/media/danieltpham/windpham/main/images/videos/wp16.mp4" controls="controls" controlsList="nodownload" style="width:auto; height:auto" class="span-5">
+								  <video src="https://media.githubusercontent.com/media/danieltpham/windpham/main/images/videos/wp16.mp4" controls="controls" controlsList="nodownload" style="width:auto; height:auto; max-width:100%; max-height:100%" class="span-5">
 </video>
 									<!--<a href="images/gallery/fulls/04.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/thumbs/04.jpg" alt="" /></a> -->
 								</div>
