--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 									<p>With the help of my friends and family, we celebrated our cultural and community successes in my first sixteen years in Australia. We partnered with Polished Man donation to take a stand against violence against children. This event marked the first of the annual WP events that bring our community together for a better cause.</p>
 								</div>
 								<div class="gallery span-5">
-									<iframe class="span-5" src="https://iframe.mediadelivery.net/embed/159636/5228b220-255b-4754-93aa-3a47f1a1dfdb?autoplay=true&loop=true&muted=true&preload=true" loading="lazy" style="border:0;position:absolute;top:0;height:100%;width:100%;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture;" allowfullscreen="true"></iframe>
+									<div class="gallery span-5" style="position:relative;padding-top:56.25%;"><iframe src="https://iframe.mediadelivery.net/embed/159636/5228b220-255b-4754-93aa-3a47f1a1dfdb?preload=true" loading="lazy" style="border:0;position:absolute;top:0;height:100%;width:100%;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture;" allowfullscreen="true"></iframe></div>
 									<!--<a href="images/gallery/fulls/04.jpg" class="image span-2-5" data-position="top"><img src="images/gallery/thumbs/04.jpg" alt="" /></a> -->
 								</div>
 							</section>
