--- a/index.html
+++ b/index.html
@@ -143,12 +143,12 @@
 								<div class="inner columns divided">
 								  <div class="span3-25"><h2 class="major">Let's Connect</h2>
 									<ul class="contact-icons color1">
-											<li class="icon brands fa-linkedin"><a href="#">LinkedIn</a></li></ul>
+											<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/wind-pham-6280a1a3/">LinkedIn</a></li></ul>
 											<div class="small">
 											<img src="images/wp-signature.png" class='image span-1-5' alt="" /></div>
 											</div>
 									<div class="span-3-25">
-										<form method="post" action="#">
+										<form method="post" action="mailto:wind.pham@ncegroup.com.au">
 											<div class="fields">
 												<div class="field half">
 													<label for="name">Name</label>
